add CorsConfiguration, so far in comments